fixed collapse

--- a/client/css/project-edit.less
+++ b/client/css/project-edit.less
@@ -46,7 +46,7 @@
 }
 
 .collasped-left {
-  margin-left: -13%;
+  margin-left: -170px;
   -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
@@ -63,7 +63,7 @@
 }
 
 .collasped-right {
-  margin-right: -16.666%;
+  margin-right: -215px;
   -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
